# kaggle-agent-template

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: README.md
.claude/skills/nvidia-kaggle-skill/: SKILL.md
data/: README.md
docs/: README.md  competition_report.md  validation_checklist.md
references/: README.md
references/knowledge/: README.md
scripts/: plot_cv_lb.py  record_submission.py  validate_submission.py
submit/: SUBMISSIONS.md  submissions.csv
templates/: daily_report.md
templates/experiment/: SESSION_NOTES.md  run.sh  train.py
templates/submit_csv/: README.md
templates/submit_kernel/: README.md
tests/: test_plot_cv_lb.py  test_record_submission.py  test_validate_submission.py
